tried and did not finish

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-dark bg-dark mb-2">
         <div class="container-fluid">
             <div class="navbar-header navbar-brand">
-                Rock, Paper, Scissor!
+                <img src="assets/images/logo.png" id="logo">
             </div>
         </div>
     </nav>
@@ -29,58 +29,38 @@
     <div class="container">
         <div class="row">
             <div class="col-12" id="user_choice">
-                <!-- Stage 1 option 1, no one waiting for a game-->
                 <div class="card" id="start_game">
                     <div class="card-body bg-light" id="msg_card_body">
-                        <p class="card-text" id="msg_header"></p>
-                        <!-- <a href="#" class="btn btn-success btn-lg" id="start_btn">Start A New Game</a> -->
                     </div>
                 </div>
-                <!-- <div class="card" id="join_game">
-                    <div class="card-body bg-light">
-                        <p class="card-text">Welcome to Rock, Paper, Scissor! <span id="player_1_name"></span> is
-                            waiting to play.</p>
-                        <a href="#" class="btn btn-success btn-lg" id="join_btn">Join Game</a>
-                    </div>
-                </div> -->
-                <!-- <div class="card" id="game_in_progress">
-                    <div class="card-body bg-light">
-                        <p class="card-text"><span id="ip_player_1_name"></span> and <span id="ip_player_2_name"></span>
-                            are currently playing a game. Please try again later.</p>
-                    </div>
-                </div> -->
-                <!-- End Stage 1 -->
-
-
-                <!-- Stage 2 -->
-                <!-- <div id="rps_buttons">
-                    <button type="button" class="btn btn-secondary rps_button">Rock</button>
-                    <button type="button" class="btn btn-secondary rps_button">Paper</button>
-                    <button type="button" class="btn btn-secondary rps_button">Scissor</button>
-                </div> -->
-                <!-- end stage 2 -->
-
-                <!-- Stage 3 -->
-
-                <!-- End Stage 3 -->
             </div>
         </div>
-        <div class="row">
-            <!-- <div class="col-6">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-header">
-                        Featured
+        <!-- <div class="row">
+                <div class="col-12" id="user_choice">
+                   
+                    <div class="card" id="start_game">
+                        <div class="card-body bg-light" id="msg_card_body">
+                            <p class="card-text" id="msg_header">Choose your weapon!</p>
+                            <a href="#" class="btn btn-success btn-lg mt-1" id="rock_btn"><img class="rps-img" src="assets/images/rock.png"></a>
+                            <a href="#" class="btn btn-success btn-lg mt-1" id="rock_btn"><img class="rps-img" src="assets/images/paper.png"></a>
+                            <a href="#" class="btn btn-success btn-lg mt-1" id="rock_btn"><img class="rps-img" src="assets/images/scissor.png"></a>
+                        </div>
                     </div>
+                </div>
+            </div>
+
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Cras justo odio</li>
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
+                        <li class="list-group-item bg-light game-list">Your pick:</li>
+                        <li class="list-group-item bg-light game-list">Opponent's pick:</li>
+                        <li class="list-group-item bg-light game-list">Result:</li>
                     </ul>
                 </div>
+
             </div>
-            <div class="col-6"></div>
-            </div> -->
-        </div>
+        </div> -->        
     </div>
 
 
